# django-blog

./: .gitignore  README.md  requirements.txt
.github/workflows/: docker-image.yml
deploy/server/: Dockerfile
poetry/: poetry.requirements.txt  pyproject.toml
server/admin_site/: admin.py  apps.py
server/blog/: admin.py  feeds.py  forms.py  models.py  tests.py  urls.py  views.py
server/blog/migrations/: 0001_initial.py  0002_comment.py  0003_alter_post_options.py
server/blog/static/: contat.html
server/blog/templatetags/: blog_tags.py
server/comment/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
server/comment/migrations/: 0001_initial.py
server/server/: asgi.py  settings.py  urls.py
server/static/blog/css/: custom.css
server/static/blog/js/: script.js
server/templates/: base.html
server/templates/admin/: base_site.html
server/templates/blog/: detail.html  index.html
server/templates/tool/: index.html
server/tool/: apps.py  models.py  urls.py  views.py
server/tool/migrations/: 0001_initial.py
